Fix dark mode colors in community hero

--- a/src/apps/fl-home/ui/sections/community/style.scss
+++ b/src/apps/fl-home/ui/sections/community/style.scss
@@ -3,5 +3,12 @@
 		text-align: center;
 		font-size: 16px;
 		padding: 10px 20px;
+		color: black;
+	}
+
+	.fluid-color-scheme-dark & {
+		.fluid-button-group {
+			background: transparent;
+		}
 	}
 }
